--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-cloud": "5.8.1",
     "@strapi/plugin-users-permissions": "5.8.1",
     "@strapi/strapi": "5.8.1",
+    "cyrillic-to-translit-js": "^3.2.1",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pg": "8.8.0",
